fix : résolution d'un problème de texte non responsive - style : comportement des cards en version mobile identique à desktop en hover - fix : déplacement des copyright en bas

--- a/src/index.css
+++ b/src/index.css
@@ -49,7 +49,6 @@
 html {
     scroll-behavior: smooth;
     font-size: 17px;
-    scrollbar-gutter: stable;
 }
 
 body {
